Added bibliography page.

--- a/bib/ref.bib
+++ b/bib/ref.bib
@@ -20,3 +20,9 @@
   isbn = {978-1-60558-062-3},
   langid = {english}
 }
+
+@article{reppyCompilingSuccessorML,
+  title = {Compiling {{Successor ML Pattern Guards}}},
+  author = {Reppy, John and Zahir, Mona},
+  langid = {english}
+}
