thats not linear lol

--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -48,7 +48,7 @@
     \begin{activity*}{Stream Type Transformers}{University of Pennsylvania}{June 2023--Aug 2023}
       \begin{itemize}[topsep=5pt, partopsep=0pt, itemsep=-1pt]
         \item Worked with Benjamin C. Pierce and Joseph W. Cutler on efficient type inference for a calculus of typed stream transformers based on ordered bunched logics, known as `Stream Types'.
-        \item Reformulated the existing system as a labeled calculus and developed a novel linear-time type checking algorithm in Haskell, improving over a previous exponential time algorithm.
+        \item Reformulated the existing system as a labeled calculus and developed a novel polynomial-time type checking algorithm in Haskell, improving over a previous exponential time algorithm.
       \end{itemize}
     \end{activity*}
 
