putting compiler on hold for now

--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -40,7 +40,7 @@
     \header{Research Experience}
     \begin{activity*}{Formally Verified CBPV Compiler}{Caltech}{Jan 2024--present}
       \begin{itemize}[topsep=5pt, partopsep=0pt, itemsep=-1pt]
-        \item Formalized the type system and semantics of a call-by-push-value calculus in Agda and implemented a bidirectional type checker.
+        \item Formalized the type system and semantics of a call-by-push-value calculus in Agda and implemented a sound and complete type checker.
         \item Implemented a reference interpreter and started work on compiling to a small stack machine with the goal of proving them equivalent.
       \end{itemize}
     \end{activity*}
