added publication list

--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -19,9 +19,9 @@
     \end{school}
 
     \header{Awards}
-    % \award{Caltech Humanities Award}{June 2024}{Caltech}
-    % \award{Caltech OPLSS Grant}{April 2024}{Caltech}
-    % \award{OPLSS Grant}{April 2024}{University of Oregon}
+    \award{Gordon McClure Memorial Communications Prize in History}{June 2024}{Caltech}
+    \award{George W. Housner Student Discovery Fund}{April 2024}{Caltech}
+    \award{OPLSS Grant}{April 2024}{University of Oregon}
     \award{PLMW @ POPL 2024}{Jan 2024}{ACM SIGPLAN/NSF}
     \award{Gates Scholar}{Apr 2021}{The Bill \& Melinda Gates Foundation}
     \award{QuestBridge National College Match Scholar}{Dec 2020}{QuestBridge}
