udpate deploy pipeline and resume

--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -13,9 +13,14 @@
     %==== Education ====%
     \header{Education}
     \begin{school}{California Institute of Technology}{Pasadena, CA}{3.4}{Sep 2021--June 2025}
-        % \item Programming Fundamentals, Methods, and Software Design (CS 1--4), Decidability and Tractability (CS 21), Algorithms (CS 38), Interactive Theorem Proving (CS 128), Programming Languages (CS 131), Compilers (CS 164), Computer Graphics Laboratory (CS 171)
+        % \item Programming Fundamentals, Methods, and Software Design (CS 1--4), Decidability and Tractability (CS 21), Algorithms (CS 38), Operating Systems (CS 124), Interactive Theorem Proving (CS 128), Programming Languages (CS 131), Compilers (CS 164), Computer Graphics Laboratory (CS 171)
+
+        % \item Decidability and Tractability (CS 21), Algorithms (CS 38), Interactive Theorem Proving (CS 128), Programming Languages (CS 131), Compilers (CS 164)
+        % \item Calculus and Linear Algebra (Ma 1), Differential Equations (Ma 2), Abstract Algebra (Ma 5), Discrete Math (Ma 6), Introduction to Geometry and Topology (Ma 109), Computability Theory (Ma 117), Graduate Probability (Ma 140)
+
         \item Decidability and Tractability (CS 21), Algorithms (CS 38), Interactive Theorem Proving (CS 128), Programming Languages (CS 131), Compilers (CS 164)
-        \item Calculus and Linear Algebra (Ma 1), Differential Equations (Ma 2), Abstract Algebra (Ma 5), Discrete Math (Ma 6), Graduate Probability (Ma 140)
+        \item Calculus and Linear Algebra (Ma 1), Differential Equations (Ma 2), Abstract Algebra (Ma 5), Discrete Math (Ma 6), Computability Theory (Ma 117)
+
     \end{school}
 
     \header{Awards}
@@ -29,7 +34,7 @@
     \header{Skills}
     \begin{skill}{Programming Languages}
       \begin{itemize}[nosep]
-        \item Haskell, OCaml, Coq, C, Agda, Java, Python, Rust, x86/x86\_64 Assembly, Lua, Zig, \LaTeX{}
+        \item Haskell, OCaml, Coq, C, Agda, Java, Python, x86/x86\_64 Assembly, Lua, Zig, \LaTeX{}
       \end{itemize}
     \end{skill}
     \vspace{-8pt}
