attempt to make spacing more consistent

--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -25,63 +25,59 @@
 
     \header{Research Experience}
     \begin{activity*}{Formally Verified CBPV Compiler}{Caltech}{Jan 2024--present}
-      \begin{itemize}[topsep=5pt, partopsep=0pt, itemsep=-1pt]
+      \begin{itemize}[topsep=4pt, partopsep=0pt, itemsep=-2pt]
         \item Worked with Michael Vanier to formalize the type system and semantics of a call-by-push-value calculus in Agda and implemented a sound and complete type checker.
         \item Implemented a reference interpreter and started work on a verified compiler targeting a small stack machine with the goal of proving them equivalent.
       \end{itemize}
     \end{activity*}
 
     \begin{activity*}{Stream Type Transformers}{University of Pennsylvania}{June 2023--Aug 2023}
-      \begin{itemize}[topsep=5pt, partopsep=0pt, itemsep=-1pt]
+      \begin{itemize}[topsep=4pt, partopsep=0pt, itemsep=-2pt]
         \item Worked with Benjamin C. Pierce and Joseph W. Cutler on efficient type inference for a calculus of typed stream transformers based on ordered bunched logics, known as `Stream Types'.
         \item Reformulated the existing system as a labeled calculus and developed a novel polynomial-time type checking algorithm in Haskell, improving over a previous exponential time algorithm.
       \end{itemize}
     \end{activity*}
 
     \begin{activity*}{Site Percolation on 2D Lattices}{OSSM}{Aug 2020--Dec 2020}
-      \begin{itemize}[topsep=5pt, partopsep=0pt, itemsep=-1pt]
+      \begin{itemize}[topsep=4pt, partopsep=0pt, itemsep=-2pt]
         \item Worked with Jayanta Rudra on creating and optimizing a visualizer for site percolation on 2D lattices for use in calculating critical thresholds for spanning clusters.
         \item Started work on an interactive visualizer for site percolation in higher dimensional lattices.
       \end{itemize}
     \end{activity*}
 
     \header{Awards And Achievements}
-    \award{Gordon McClure Memorial Communications Prize in History}{June 2024}{Caltech}{x}
-    \award{George W. Housner Student Discovery Fund Recipient}{April 2024}{Caltech}{x}
-    \award{OPLSS Grant Recipient}{April 2024}{University of Oregon}{x}
-    \award{PLMW @ POPL}{Jan 2024}{ACM SIGPLAN/NSF}{x}
-    \award{Gates Scholar}{Apr 2021}{The Bill \& Melinda Gates Foundation}{x}
-    \award{QuestBridge National College Match Scholar}{Dec 2020}{QuestBridge}{x}
+    \begin{description}[topsep=4pt, partopsep=0pt, itemsep=-2pt]
+      \award{Gordon McClure Memorial Communications Prize in History}{June 2024}{Caltech}
+      \award{George W. Housner Student Discovery Fund Recipient}{April 2024}{Caltech}
+      \award{OPLSS Grant Recipient}{April 2024}{University of Oregon}
+      \award{PLMW @ POPL}{Jan 2024}{ACM SIGPLAN/NSF}
+      \award{Gates Scholar}{Apr 2021}{The Bill \& Melinda Gates Foundation}
+      \award{QuestBridge National College Match Scholar}{Dec 2020}{QuestBridge}
+    \end{description}
 
     \header{Work Experience}
     \begin{activity*}{Teaching Assistant}{Caltech}{Jan 2024--present}
-    \begin{quote}
-      \vspace{-\baselineskip}
-      \vspace{\parskip}
-
-      Served as TA for CS 128, 164, 171. Graded assignments, held office hours and recitations.
-
-      \vspace{-\baselineskip}
-      \vspace{\parskip}
-    \end{quote}
+      \begin{itemize}[label={}, nosep]
+        \item Served as TA for CS 128, 164, 171. Graded assignments, held office hours and recitations.
+      \end{itemize}
     \end{activity*}
 
     \header{Skills}
     \begin{skill}{Programming Languages}
-      \begin{itemize}[nosep]
+      \begin{itemize}[label={},topsep=4pt, partopsep=0pt, itemsep=-2pt]
         \item Haskell, OCaml, Coq, C, Agda, Java, Python, x86/x86\_64 Assembly, Lua, Zig, \LaTeX{}
       \end{itemize}
     \end{skill}
 
     \begin{skill}{Unix Operating Systems}
-      \begin{itemize}[nosep]
+      \begin{itemize}[label={}, topsep=4pt, partopsep=0pt, itemsep=-2pt]
         \item Bash, Fish, Vim, Emacs, Git, gdb, Linux, various Unix command line programs
      \end{itemize}
     \end{skill}
 
     \header{Projects and Extracurriculars}
     \begin{activity}{Zig Programming Language Project}{Sept 2018--Sept 2023}
-      \begin{itemize}[topsep=5pt, partopsep=0pt, itemsep=-1pt]
+      \begin{itemize}[topsep=4pt, partopsep=0pt, itemsep=-2pt]
         \item Contributed to standard library, various stages of the bootstrapping compiler, and improved support for non-MSVC based build environments on Windows.
         \item Reported several bugs and made multiple influential language proposals.
       \end{itemize}
@@ -89,7 +85,7 @@
 
     % \begin{activity}{Bidirectional Type Checkers}{Jul 2022--Mar 2023}
     %   Implemented type checkers for the bidirectional type systems presented in
-    %   \begin{itemize}[topsep=5pt, partopsep=0pt, itemsep=-1pt]
+    %   \begin{itemize}[topsep=4pt, partopsep=0pt, itemsep=-2pt]
     %     \item \textit{A Mechanical Formalization of Higher-Ranked Polymorphic Type Inference}
     %     \item \textit{Complete and Easy Bidirectional Typechecking for Higher-Rank Polymorphism}
     %     \item \textit{Let Arguments Go First}
@@ -97,14 +93,14 @@
     % \end{activity}
 
     \begin{activity}{Unlambda Interpreter}{Mar 2022}
-      \begin{itemize}[topsep=5pt, partopsep=0pt, itemsep=-1pt]
+      \begin{itemize}[topsep=4pt, partopsep=0pt, itemsep=-2pt]
         \item Wrote an Unlambda interpreter, using a CK machine to capture and restore continuations.
         \item Started work on a graph-rewriting interpreter and compiler targeting x86\_64 assembly.
       \end{itemize}
     \end{activity}
 
     % \begin{activity}{Brainf*ck Compiler}{Dec 2021}
-    %   \begin{itemize}[topsep=5pt, partopsep=0pt, itemsep=-1pt]
+    %   \begin{itemize}[topsep=4pt, partopsep=0pt, itemsep=-2pt]
     %     \item Implemented a dependency-free Brainf*ck interpreter and compiler with support for outputting ELF executables with no dependency on any system libraries.
     %     \item Implemented several optimizations leading to a 2-5x performance increase over the baseline compiler and a reduction of the number of syscalls needed for IO-bound programs.
     %   \end{itemize}
