--- a/resume/resume.sty
+++ b/resume/resume.sty
@@ -9,8 +9,7 @@
 \pagestyle{empty}
 \raggedright%
 
-\def\bull{\vrule height 0.8ex width .7ex depth -.1ex }
-% \setlist[itemize]{noitemsep, topsep=0pt}
+\def\bull{\vrule height 0.8ex width .7ex depth -.1ex}
 
 \newcommand{\header} [1] {
     {\hspace*{-18pt}\vspace*{6pt} \textsc{#1}}
@@ -30,53 +29,18 @@
     \textbf{#1}\hfill #2\\
     \textit{GPA}: #3\hfill#4 \\
     Relevant Coursework:
-    \begin{itemize}[topsep=5pt, partopsep=0pt, itemsep=-1pt]
+    \begin{itemize}[topsep=4pt, partopsep=0pt, itemsep=-2pt]
 } {
     \end{itemize}
-    \vspace*{-4pt}
-}
+  }
 
-% \newenvironment{award} [3] {
-%     \textbf{#1}\hfill #2\\
-%     \textit{#3}\\
-%     \vspace*{2pt}
-% } {
-%     \vspace*{2pt}
-%   }
-% \newcommand{\award} [3] {
-%     \textbf{#1}\hfill #2\\
-%     \textit{#3}\\
-%     \vspace*{4pt}
-% }
-
-\newcommand{\award} [4] {
-  \textbf{#1}, #3\hfill #2\\
-  % #4\\
-  \vspace*{1pt}
-}
-
-\newenvironment{activity} [2] {
-    \textbf{#1}\hfill #2\\
-    % \vspace*{4pt}
-} {}
-
-\newenvironment{activity*} [3] {
-    \textbf{#1}, #2\hfill #3\\
-    % \vspace*{4pt}
-} {}
+\newcommand{\award} [3] {\item[#1{\normalfont,}] #3\hfill #2}
+\newenvironment{activity} [2] {\textbf{#1}\hfill #2\\} {}
+\newenvironment{activity*} [3] {\textbf{#1}, #2\hfill #3\\} {}
 
 \newenvironment{publication} [3] {
     \textbf{\href{#2}{#1}}, #3\\
-    \begin{quote}
-    \vspace{-\baselineskip}
-    \vspace{\parskip}
-} {
-    \vspace{-\baselineskip}
-    \vspace{\parskip}
-    \end{quote}
-}
+    \begin{itemize}[label={},topsep=4pt, partopsep=0pt, itemsep=-2pt]
+    \item} {\end{itemize}}
 
-\newenvironment{skill} [1] {
-    \textbf{#1}\\
-    \vspace*{4pt}
-} {\vspace*{2pt}}
+\newenvironment{skill} [1] {\textbf{#1}} {}
