more resume tweaks

--- a/resume/resume.sty
+++ b/resume/resume.sty
@@ -20,14 +20,16 @@
     \vspace*{-50pt}
     \begin{center}
         {\Large \scshape {#1}}\\
-        \vspace*{8pt}
+        \vspace*{2pt}
         #2 $\cdot$ #3 $\cdot$ #4
     \end{center}
 }
 
 \newenvironment{school} [4] {
     \textbf{#1}\hfill #2\\
-    \textit{GPA}: #3\hfill#4 \\
+    \textbf{B.S.}~\textit{Computer Science}, #4\hfill\\
+    % \textit{GPA}: #3 \\
+
     Relevant Coursework:
     \begin{itemize}[topsep=4pt, partopsep=0pt, itemsep=-2pt]
 } {
