--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -1,3 +1,5 @@
+% -*- fill-column: 100; indent-line-function: indent-relative; -*-
+
 \documentclass[a4paper,10pt]{article}
 \usepackage{resume}
 
@@ -7,15 +9,22 @@
 
     %==== Education ====%
     \header{Education}
+    % \textbf{California Institute of Technology}\hfill Pasadena, CA\\
+    %   \begin{itemize}[topsep=4pt, partopsep=0pt, itemsep=-2pt]
+    % \item \textbf{B.S.}~\textit{Computer Science}, {Sep 2021--June 2025}
+    % \item \textit{GPA}: 3.4
+    % \end{itemize}
+
     \begin{school}{California Institute of Technology}{Pasadena, CA}{3.4}{Sep 2021--June 2025}
         % \item Programming Fundamentals, Methods, and Software Design (CS 1--4), Decidability and Tractability (CS 21), Algorithms (CS 38), Operating Systems (CS 124), Interactive Theorem Proving (CS 128), Programming Languages (CS 131), Compilers (CS 164), Computer Graphics Laboratory (CS 171)
+
+        \item Programming Fundamentals, Methods, and Software Design (CS 1--4), Decidability and Tractability (CS 21), Algorithms (CS 38), Operating Systems (CS 124), Interactive Theorem Proving (CS 128), Programming Languages (CS 131), Compilers (CS 164), Computer Graphics Lab (CS 171)
 
         % \item Decidability and Tractability (CS 21), Algorithms (CS 38), Interactive Theorem Proving (CS 128), Programming Languages (CS 131), Compilers (CS 164)
         % \item Calculus and Linear Algebra (Ma 1), Differential Equations (Ma 2), Abstract Algebra (Ma 5), Discrete Math (Ma 6), Introduction to Geometry and Topology (Ma 109), Computability Theory (Ma 117), Graduate Probability (Ma 140)
 
-        \item Decidability and Tractability (CS 21), Algorithms (CS 38), Interactive Theorem Proving (CS 128), Programming Languages (CS 131), Compilers (CS 164)
-        \item Calculus and Linear Algebra (Ma 1), Differential Equations (Ma 2), Abstract Algebra (Ma 5), Discrete Math (Ma 6), Computability Theory (Ma 117)
-
+        % \item Decidability and Tractability (CS 21), Algorithms (CS 38), Interactive Theorem Proving (CS 128), Programming Languages (CS 131), Compilers (CS 164), Computer Graphics Lab (CS 171)
+        \item Calculus and Linear Algebra (Ma 1), Differential Equations (Ma 2), Abstract Algebra (Ma 5), Discrete Math (Ma 6), Computability Theory (Ma 117), Graduate Probability (Ma 140)
     \end{school}
 
     \header{Publications}
@@ -58,14 +67,14 @@
     \header{Work Experience}
     \begin{activity*}{Teaching Assistant}{Caltech}{Jan 2024--present}
       \begin{itemize}[label={}, nosep]
-        \item Served as TA for CS 128, 164, 171. Graded assignments, held office hours and recitations.
+        \item TA for CS 128, 131, 164, and 171. Graded assignments, held office hours, and led recitations.
       \end{itemize}
     \end{activity*}
 
     \header{Skills}
     \begin{skill}{Programming Languages}
       \begin{itemize}[label={},topsep=4pt, partopsep=0pt, itemsep=-2pt]
-        \item Haskell, OCaml, Coq, C, Agda, Java, Python, x86/x86\_64 Assembly, Lua, Zig, \LaTeX{}
+        \item Haskell, OCaml, Coq, C, Agda, Java, Python, x86/x86\_64 Assembly, SQL, Lua, \LaTeX{}
       \end{itemize}
     \end{skill}
 
