--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -4,28 +4,16 @@
 \usepackage{resume}
 
 \begin{document}
-    %==== Contact Info ====%
-    \contact{Emeka Nkurumeh}{Pasadena, CA}{\href{https://emekoi.github.io/}{https://emekoi.github.io/}}{\href{mailto:e.nk@caltech.edu}{e.nk@caltech.edu}}
+    \contact{Emeka Nkurumeh}{Bloomington, IN}{\href{https://emekoi.github.io/}{https://emekoi.github.io/}}{\href{mailto:e.nk@caltech.edu}{emnkuru@iu.edu}}
 
-    %==== Education ====%
     \header{Education}
-    % \textbf{California Institute of Technology}\hfill Pasadena, CA\\
-    %   \begin{itemize}[topsep=4pt, partopsep=0pt, itemsep=-2pt]
-    % \item \textbf{B.S.}~\textit{Computer Science}, {Sep 2021--June 2025}
-    % \item \textit{GPA}: 3.4
+    % \begin{itemize}[topsep=4pt, partopsep=0pt, itemsep=-2pt]
+    %   \item \school{Ph.D.}{Indiana University}{Bloomington, IN}{n/a}{Aug 2025--present}
+    %   \item \school{B.S.}{California Institute of Technology}{Pasadena, CA}{n/a}{Sep 2021--June 2025}
     % \end{itemize}
 
-    \begin{school}{California Institute of Technology}{Pasadena, CA}{3.4}{Sep 2021--June 2025}
-        % \item Programming Fundamentals, Methods, and Software Design (CS 1--4), Decidability and Tractability (CS 21), Algorithms (CS 38), Operating Systems (CS 124), Interactive Theorem Proving (CS 128), Programming Languages (CS 131), Compilers (CS 164), Computer Graphics Laboratory (CS 171)
-
-        \item Programming Fundamentals, Methods, and Software Design (CS 1--4), Decidability and Tractability (CS 21), Algorithms (CS 38), Operating Systems (CS 124), Interactive Theorem Proving (CS 128), Programming Languages (CS 131), Compilers (CS 164), Computer Graphics Lab (CS 171)
-
-        % \item Decidability and Tractability (CS 21), Algorithms (CS 38), Interactive Theorem Proving (CS 128), Programming Languages (CS 131), Compilers (CS 164)
-        % \item Calculus and Linear Algebra (Ma 1), Differential Equations (Ma 2), Abstract Algebra (Ma 5), Discrete Math (Ma 6), Introduction to Geometry and Topology (Ma 109), Computability Theory (Ma 117), Graduate Probability (Ma 140)
-
-        % \item Decidability and Tractability (CS 21), Algorithms (CS 38), Interactive Theorem Proving (CS 128), Programming Languages (CS 131), Compilers (CS 164), Computer Graphics Lab (CS 171)
-        \item Calculus and Linear Algebra (Ma 1), Differential Equations (Ma 2), Abstract Algebra (Ma 5), Discrete Math (Ma 6), Computability Theory (Ma 117), Graduate Probability (Ma 140)
-    \end{school}
+      \school{Ph.D.}{Indiana University}{Bloomington, IN}{n/a}{Aug 2025--present}
+      \school{B.S.}{California Institute of Technology}{Pasadena, CA}{n/a}{Sep 2021--June 2025}
 
     \header{Publications}
     \begin{publication}{Stream Types}{https://dl.acm.org/doi/10.1145/3656434}{PLDI 2024}
@@ -33,7 +21,7 @@
     \end{publication}
 
     \header{Research Experience}
-    \begin{activity*}{Formally Verified CBPV Compiler}{Caltech}{Jan 2024--present}
+    \begin{activity*}{Formally Verified CBPV Compiler}{Caltech}{Jan 2024--June 2025}
       \begin{itemize}[topsep=4pt, partopsep=0pt, itemsep=-2pt]
         \item Worked with Michael Vanier to formalize the type system and semantics of a call-by-push-value calculus in Agda and implemented a sound and complete type checker.
         \item Implemented a reference interpreter and started work on a verified compiler targeting a small stack machine with the goal of proving them equivalent.
@@ -65,7 +53,7 @@
     \end{description}
 
     \header{Work Experience}
-    \begin{activity*}{Teaching Assistant}{Caltech}{Jan 2024--present}
+    \begin{activity*}{Teaching Assistant}{Caltech}{Jan 2024--June 2025}
       \begin{itemize}[label={}, nosep]
         \item TA for CS 128, 131, 164, and 171. Graded assignments, held office hours, and led recitations.
       \end{itemize}
@@ -74,7 +62,7 @@
     \header{Skills}
     \begin{skill}{Programming Languages}
       \begin{itemize}[label={},topsep=4pt, partopsep=0pt, itemsep=-2pt]
-        \item Haskell, OCaml, Coq, C, Agda, Java, Python, x86/x86\_64 Assembly, SQL, Lua, \LaTeX{}
+        \item Haskell, OCaml, Coq, Agda, C, C++, Java, Python, SQL, x86/x86\_64 Assembly, Lua, \LaTeX{}
       \end{itemize}
     \end{skill}
 
